--- a/forms.css
+++ b/forms.css
@@ -30,7 +30,7 @@ form {
   p {
     font-size: 1.2em;
     text-align: center;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
   }
   
   .form-row {
@@ -57,7 +57,7 @@ form {
   }
   
   textarea {
-    height: 150px;
+    height: 100px;
   }
   
   button[type="submit"] {
@@ -105,6 +105,32 @@ form {
   
     button[type="submit"] {
       font-size: 0.9em;
+      justify-content: center;
     }
   }
+
+  .button {
+    --bg: #000;
+    --hover-bg: #bf62e6;
+    --hover-text: #000;
+    color: #fff;
+    border: 1px solid var(--bg);
+    border-radius: 4px;
+    padding: 0.8em 2em;
+    background: var(--bg);
+    transition: 0.2s;
+  }
+  
+  .button:hover {
+    color: var(--hover-text);
+    transform: translate(-0.25rem,-0.25rem);
+    background: var(--hover-bg);
+    box-shadow: 0.25rem 0.25rem var(--bg);
+  }
+  
+  .button:active {
+    transform: translate(0);
+    box-shadow: none;
+  }
+
   
